--- a/flaskr/templates/blog/home.html
+++ b/flaskr/templates/blog/home.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block main %}
+  <a class="nav-link" href="{{ url_for('blog.post', post='conquest_of_happiness') }}"><em>The Conquest of Happiness</em> by Bertrand Russell</a>
   <a class="nav-link" href="{{ url_for('blog.post', post='on_hedonism') }}">On Hedonism</a>
   <a class="nav-link" href="{{ url_for('blog.post', post='rashomon') }}"><em>Rashomon</em>, by Akira Kurosawa</a>
   <a class="nav-link" href="{{ url_for('blog.post', post='sadly_porn') }}"><em>Sadly, Porn</em>, by Edward Teach</a>
